<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ResultActivity">

    <com.example.myapplication.ui.custom_view.BatteryHealthView
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/batteryHealthView"
        android:layout_width="250dp"
        app:labelFont="@font/font_inter_semi_bold"
        app:labelTextSize="16sp"
        app:labelTextColor="@color/color_37474F"
        android:layout_height="250dp"
        android:layout_gravity="center"/>

    <View
        android:id="@+id/vInfoHealth"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_round_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batteryHealthView" />

    <TextView
        android:id="@+id/txvBetteryPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_inter_regular"
        android:text="@string/designed_battery_capacity"
        android:textColor="@color/color_37474F"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/vInfoHealth"
        app:layout_constraintTop_toTopOf="@+id/vInfoHealth" />

    <TextView
        android:id="@+id/txvInfoBetteryPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_inter_regular"
        android:text="@string/nul"
        android:textColor="@color/color_607D8B"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/vInfoHealth"
        app:layout_constraintTop_toTopOf="@+id/vInfoHealth" />

    <TextView
        android:id="@+id/txvEstimateBattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_inter_regular"
        android:text="@string/estimated_battery_capacity"
        android:textColor="@color/color_37474F"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/vInfoHealth"
        app:layout_constraintTop_toBottomOf="@+id/txvBetteryPermission" />

    <TextView
        android:id="@+id/txvInfoEstimateBattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_inter_regular"
        android:text="@string/nul"
        android:textColor="@color/color_607D8B"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/vInfoHealth"
        app:layout_constraintTop_toBottomOf="@+id/txvInfoBetteryPermission" />

    <TextView
        android:id="@+id/txvDesignBattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/font_inter_regular"
        android:text="@string/based_on"
        android:textColor="@color/color_37474F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/vInfoHealth"
        app:layout_constraintStart_toStartOf="@+id/vInfoHealth"
        app:layout_constraintTop_toBottomOf="@+id/txvEstimateBattery" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_round_8"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vInfoHealth"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>