<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_16">

    <View
        android:id="@+id/vProgramer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgProgrammer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"

        android:src="@drawable/ic_programmer"
        app:layout_constraintBottom_toBottomOf="@+id/vProgramer"
        app:layout_constraintStart_toStartOf="@+id/vProgramer"
        app:layout_constraintTop_toTopOf="@+id/vProgramer" />

    <TextView
        android:id="@+id/txvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_inter_semi_bold"
        android:gravity="center_vertical"
        android:text="@string/programmer"
        android:textColor="@color/color_37474F"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgProgrammer"
        app:layout_constraintStart_toEndOf="@+id/imgProgrammer"
       />

    <com.example.myapplication.ui.custom_view.IOSSwitchView
        android:id="@+id/customSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/vProgramer"
        app:layout_constraintEnd_toEndOf="@+id/vProgramer"
        app:layout_constraintTop_toTopOf="@+id/vProgramer" />


    <TextView
        android:id="@+id/txvSetTimeAndInterval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/font_inter_regular"
        android:gravity="center_vertical"
        android:text="@string/text_set_time_and_interval"
        android:textColor="@color/color_37474F"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/vContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vProgramer" />

    <View
        android:id="@+id/vContent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvSetTimeAndInterval" />

    <TextView
        android:id="@+id/txvSetTime"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_inter_semi_bold"
        android:text="@string/set_time"
        android:textColor="@color/color_607D8B"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/vContent"
        app:layout_constraintTop_toTopOf="@+id/vContent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetTime"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round_8"
        android:drawableEnd="@drawable/ic_set"
        android:fontFamily="@font/font_inter_medium"
        android:gravity="center_vertical|start"
        android:paddingStart="6dp"
        android:text="@string/text_set_time"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/vProgramer"
        app:layout_constraintTop_toBottomOf="@+id/txvSetTime" />

    <TextView
        android:id="@+id/txvSetInterval"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/font_inter_semi_bold"
        android:text="@string/set_interval"
        android:textColor="@color/color_607D8B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/vContent"
        app:layout_constraintTop_toTopOf="@+id/vContent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetInterval"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_round_8"
        android:drawableEnd="@drawable/ic_set"
        android:fontFamily="@font/font_inter_medium"
        android:gravity="center_vertical|start"
        android:paddingStart="6dp"
        android:text="@string/text_set_time"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/vContent"
        app:layout_constraintTop_toBottomOf="@+id/txvSetInterval" />

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vContent" />

    <TextView
        android:id="@+id/txvContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/font_inter_italic"
        android:text="@string/text_content"
        android:textColor="@color/color_607D8B"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgInfo"
        app:layout_constraintTop_toBottomOf="@+id/vContent" />


</androidx.constraintlayout.widget.ConstraintLayout>